changed error handler

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "owner_ids": [630659954944114689, 732842920889286687],
     "prefix": ".",
-    "log_channel": 0
+    "log_channel": 0,
+    "guild": 974587000038490133
 }
