--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "owner_ids": [630659954944114689, 732842920889286687],
-    "prefix": ".",
+    "prefix": "d.",
     "log_channel": 0,
     "guild": 974587000038490133
 }
